--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">VolunteerifyNGO</string>
     <string name="date_header_yesterday">Yesterday</string>
     <string name="date_header_today">Today</string>
+    <string name="google_maps_key">AIzaSyCZU8p4fdddcf1BNpzeqJnHfbSGG9bv_HQ</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
