--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="feedback_text">We Welcome Your \nFeedback/Suggestions</string>
+    <string name="enroll_txt">Enroll/Search \n in Index</string>
 
 </resources>
